neonize/neonize-linux-amd64.h

extern struct BytesReturn* GetPNFromLID(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* GetLIDFromPN(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* Upload(char* id, unsigned char* mediabuff, int mediaSize, int mediatype);
extern struct BytesReturn* UploadNewsletter(char* id, unsigned char* data, int dataSize, int appInfo);
extern char* GenerateMessageID(char* id);
extern struct BytesReturn* TestStruct();
extern struct BytesReturn* SendMessage(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* messageByte, int messageSize);
extern struct BytesReturn* PinMessage(char* id, unsigned char* ChatJIDByte, int ChatJIDSize, unsigned char* SenderJIDByte, int SenderJIDSize, char* messageID, int seconds);
extern void Neonize(char* db, char* id, unsigned char* JIDByte, int JIDSize, char* logLevel, ptr_to_python_function_string qrCb, ptr_to_python_function_string logStatus, ptr_to_python_function_bytes event, ptr_to_python_function_callback_bytes2 logCb, unsigned char* subscribes, int lenSubscriber, unsigned char* devicePropsBuf, int devicePropsSize, unsigned char* pairphone, int pairphoneSize, _Bool automaticMessageRerequestFromPhone);
extern void Disconnect(char* id);
extern struct BytesReturn* DownloadAny(char* id, unsigned char* messageProto, int size);
extern struct BytesReturn* DownloadMediaWithPath(char* id, char* directPath, unsigned char* encFileHash, int encFileHashSize, unsigned char* fileHash, int fileHashSize, unsigned char* mediakey, int mediaKeySize, int fileLength, int mediaType, char* mmsType);
extern struct BytesReturn* IsOnWhatsApp(char* id, char* numbers);
extern _Bool IsConnected(char* id);
extern _Bool IsLoggedIn(char* id);
extern struct BytesReturn* GetUserInfo(char* id, unsigned char* JIDSByte, int JIDSSize);
// /GROUP
//
extern struct BytesReturn* GetGroupInfo(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* GetGroupInfoFromInvite(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* inviter, int inviterSize, char* code, int expiration);
extern struct BytesReturn* GetGroupInfoFromLink(char* id, char* code);
extern struct BytesReturn* GetGroupRequestParticipants(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* GetLinkedGroupsParticipants(char* id, unsigned char* JIDByte, int JIDSize);
extern char* SetGroupName(char* id, unsigned char* JIDByte, int JIDSize, char* name);
extern struct BytesReturn* SetGroupPhoto(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* Photo, int PhotoSize);
extern struct BytesReturn* SetProfilePhoto(char* id, unsigned char* Photo, int PhotoSize);
extern char* LeaveGroup(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* GetGroupInviteLink(char* id, unsigned char* JIDByte, int JIDSize, _Bool revoke);
extern struct BytesReturn* JoinGroupWithLink(char* id, char* code);
extern char* JoinGroupWithInvite(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* inviterByte, int inviterSize, char* code, int expiration);
extern char* LinkGroup(char* id, unsigned char* parent, int parentSize, unsigned char* child, int childSize);
extern char* SendChatPresence(char* id, unsigned char* JIDByte, int JIDSize, int state, int media);
extern struct BytesReturn* BuildRevoke(char* id, unsigned char* ChatByte, int ChatSize, unsigned char* SenderByte, int SenderSize, char* messageID);
extern struct BytesReturn* BuildPollVoteCreation(char* id, char* name, unsigned char* options, int optionsSize, int selectableOptionCount);
extern struct BytesReturn* CreateNewsletter(char* id, unsigned char* createNewsletterParams, int size);
extern char* FollowNewsletter(char* id, unsigned char* jid, int size);
extern struct BytesReturn* GetNewsletterInfo(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* GetNewsletterInfoWithInvite(char* id, char* key);
extern struct BytesReturn* GetNewsletterMessageUpdate(char* id, unsigned char* JIDByte, int JIDSize, int Count, int Since, int After);
extern struct BytesReturn* GetNewsletterMessages(char* id, unsigned char* JIDByte, int JIDSize, int Count, int Before);
extern char* Logout(char* id);
extern char* MarkRead(char* id, char* ids, int timestamp, unsigned char* chatByte, int chatSize, unsigned char* senderByte, int senderSize, char* receiptType);
extern char* NewsletterMarkViewed(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* MessageServerID, int MessageServerIDSize);
extern char* NewsletterSendReaction(char* id, unsigned char* JIDByte, int JIDSize, int messageServerID, char* reaction, char* messageID);
extern struct BytesReturn* NewsletterSubscribeLiveUpdates(char* id, unsigned char* JIDByte, int JIDSize);
extern char* NewsletterToggleMute(char* id, unsigned char* JIDByte, int JIDSize, _Bool mute);
extern struct BytesReturn* ResolveBusinessMessageLink(char* id, char* code);
extern struct BytesReturn* ResolveContactQRLink(char* id, char* code);
extern struct BytesReturn* PairPhone(char* id, unsigned char* pairPhoneByte, int pairPhoneSize);
extern char* SendAppState(char* id, unsigned char* patchByte, int patchSize);
extern char* SetDefaultDisappearingTimer(char* id, int64_t timer);
extern char* SetDisappearingTimer(char* id, unsigned char* JIDByte, int JIDSize, int64_t timer, int64_t settingTS);
extern void SetForceActiveDeliveryReceipts(char* id, _Bool active);
extern struct BytesReturn* GetPrivacySettings(char* id);
extern struct BytesReturn* GetProfilePicture(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* paramsByte, int paramsSize);
extern struct BytesReturn* GetStatusPrivacy(char* id);
extern struct BytesReturn* GetSubGroups(char* id, unsigned char* JIDByte, int JIDSize);
extern struct BytesReturn* GetSubscribedNewsletters(char* id);
extern struct BytesReturn* GetUserDevices(char* id, unsigned char* JIDSByte, int JIDSSize);
extern struct BytesReturn* GetBlocklist(char* id);
extern struct BytesReturn* BuildPollVote(char* id, unsigned char* pollInfo, int pollInfoSize, unsigned char* optionName, int optionNameSize);
extern struct BytesReturn* BuildReaction(char* id, unsigned char* chat, int chatSize, unsigned char* sender, int senderSize, char* messageID, char* reaction);
extern struct BytesReturn* CreateGroup(char* id, unsigned char* createGroupByte, int createGroupSize);
extern struct BytesReturn* GetJoinedGroups(char* id);
extern struct BytesReturn* GetMe(char* id);
extern struct BytesReturn* GetContactQRLink(char* id, _Bool revoke);